[package]
name = "psbt-example-wallet"
version = "0.1.0"
authors = ["Sebastian Geisler <sebastian@blockstream.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.0-rc1"
bitcoin = "0.23.0" #{ git = "https://github.com/sgeisler/rust-bitcoin/", branch = "2020-08-psbt-interfaces" }
bitcoincore-rpc = { git = "https://github.com/sgeisler/rust-bitcoincore-rpc", branch = "2020-08-scantxoutset" }
hex = "0.4.2"
secp256k1 = "0.17.2"
miniscript = { git = "https://github.com/afilini/rust-miniscript/", branch = "sgeisler-descriptor-key"}
base64 = "0.12.3"
itertools = "0.9.0"
structopt = "0.3.16"

[patch.crates-io]
bitcoin = {git = "https://github.com/sgeisler/rust-bitcoin/", branch = "2020-06-bip32-derive-more"}
